map selector plus cleanup

--- a/demand.html
+++ b/demand.html
@@ -33,10 +33,10 @@
             <li>
               <a href="households.html">1. Households</a>
             </li>
-            <li class="active">
+            <li>
               <a href="facilities.html">2. Facilities</a>
             </li>
-            <li>
+            <li class="active">
               <a href="demand.html">3. Demand</a>
             </li>
             <li>
@@ -54,23 +54,28 @@
   <div class="container">
     <div class="col-md-1"></div>
     <div class="col-md-10">
-      <h3>Step 2: Locate institutional facilities</h3>
+      <h3>Step 3: Calculate Energy Demand</h3>
       <div class="row">
       <div class="col-md-5">
-      <p><strong>ACTION STEPS:</strong></p>
-      <ul>
-      <li>Identify the individual locations of large energy demand points</li>
-      </ul>
-      <p><strong>IN RUHIIRA:</strong></p>
-      <p>We identified health and education facilities, water pumps, markets and grinding mills as the major energy demand points. We strategized with local stakeholders (utilities, industry practitioners, etc.) to identify the key facility types and already-planned locations for new constructions.</p>
+        <p><strong>ACTION STEPS:</strong></p>
+        <ul>
+        <li>Assign each type of electricity user an annual energy usage</li>
+        </ul>
 
-      <p>After developing a facility list, each facility was mapped using our mobile collection technology, <a href="http://formhub.org" target="blank">Formhub</a>. Energy use information from each facility was also collected to aid with the next step, calculating demand for both households and facilities.</p>
+        <p><strong>IN RUHIIRA:</strong></p>
+        <p>Household energy usage was derived from energy surveys that identified the power demands of potential customers along with respective energy load factors to extrapolate annual energy loads.</p>
 
-      <p><a href="households.html">&lt; Prev</a> | <a href="demand.html">Next: Step 3 &gt;</a></p>
-      </div>
-      <div class="col-md-5" style="padding-top:20px;">
-      <img src="images/Map_FacilityLocations.jpg"/>
-      </div>
+        <p>We determined the annual energy demand of institutional facilities using collected energy use data from each facility. For example, water pumps have energy ratings. In Ruhiira, we assumed that water pumps have a 25% utilization factor (operating ¼ of the day), which we used to determine the yearly demand value.</p>
+
+        <p>Once annual electricity usage was calculated, we had a complete demand map of energy use for Ruhiira.</p> ￼
+        ￼<p style="color:#589917">TIP: Consider adding weight to certain facilities. Check with governments and local stakeholders to determine if any facilities should be prioritized. In our experience, this has been necessary because of political or strategic imperatives. This can be done by adding a multiplier to the energy usage at certain facilities. For example, in Indonesia, it was extremely important to the government to provide inexpensive energy to schools and health clinics. We multiplied the energy use at those facilities 10x in models.</p>
+        <p><a href="facilities.html">&lt; Prev</a> | <a href="technology.html">Next: Step 4 &gt;</a></p>
+        </div>
+        <div class="col-md-5">
+          <img src="images/Map_EnergyDemand.jpg" />
+        <br />
+          <img src="images/Data_AnnualEnergyDemand.jpg" />
+        </div>
       </div>
     </div>
     <div class="col-md-1"></div>
