--- a/households.html
+++ b/households.html
@@ -71,16 +71,17 @@
       <p style="color:#589917">TIP: Household enumeration is a good option when existing site data is lacking and local governments are willing and able to use modernized data gathering tools. In these cases, focus on developing the capacity of local stakeholders for ongoing data acquisition and maintenance rather than collecting the data with your own team.</p>
   
       <p>Our software identified 13,366 households in Ruhiira, which we clustered at a resolution of 500 m<sup>2</sup>. In our model, we assumed the number of people in each household to be the same, which we found to be XX people per household.</p>
+      <p><a href="overview.html">&lt; Prev</a> | <a href="facilities.html">Next: Step 2 &gt;</a></p>
       </div>
       <div class="col-md-5" style="padding-top:20px;">
         <img src="images/Map_Clusters.jpg"/>
       </div>
       </div>
-      <p><a href="overview.html">Prev</a> | <a href="facilities.html">Next: Step 2</a></p>
       <div class="row" style="padding-top: 10px;">
       <p style="color:#808080"><i><sup>1</sup>The main two ways countries represent their population data is with polygons or points. Polygons are bounded geographic areas containing a given population (usually around 5000 people). Point population data, on the other hand, involves individual households or clusters of households that are assigned geospatial locations. Polygons are often problematic to use for energy planning because areas can range up to as much as 100 km<sup>2</sup> depending on population density.</i></p>
+      </div>
     </div>
-    <div class="row col-md-1"></div>
+    <div class="col-md-1"></div>
   </div><!-- Latest compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
