--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     </nav>
   </div>
   <div class="container">
-    <div class="row col-md-1"></div>
-    <div class="row col-md-10"><img class="img-responsive" src="images/DPT_hero2.jpg"></div>
-    <div class="row col-md-1"></div>
+    <div class="col-md-1"></div>
+    <div class="col-md-10"><img class="img-responsive" src="images/DPT_hero2.jpg"></div>
+    <div class="col-md-1"></div>
   </div>
   <div class="bigspacer"></div>
   <div class="container">
-    <div class="row col-md-1"></div>
-    <div class="row col-md-10">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
       <p>The Sustainable Engineering Lab has over a decade of experience in development planning. Our knowledge has enabled us to work with countries such as India, Indonesia, Papua New Guinea, and Sub-Saharan Africa. We created this toolkit to encourage collaboration and communication around energy planning, as well as to provide tips and insights from our experience that may be helpful to other groups.</p>
       <p>A unique and important aspect of our approach is a focus on creating plans quickly. Traditional master planning efforts require 3 to 5 years before they are usable, becoming outdated quickly because they are inflexible to changes in population, technology and constraints. We approach development planning with dynamism and effectiveness in mind.</p>
       <p>We are able to do this by creating a flexible model and using software that provides real-time feedback, informative visualizations and outputs. This ensures high quality data, improved coverage, and the ability to react to changes on the ground.</p>
@@ -71,7 +71,7 @@
       </strong>
       </p>
     </div>
-    <div class="row col-md-1"></div>
+    <div class="col-md-1"></div>
   </div><!-- Latest compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
