--- a/overview.html
+++ b/overview.html
@@ -52,13 +52,15 @@
   </div>
   <div class="bigspacer"></div>
   <div class="container">
-    <div class="row col-md-1"></div>
-    <div class="row col-md-10">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
       <h3>Overview: Energy Planning in Ruhiira</h3>
       <div class="row">
         <div class="col-md-5">
         <p>When the Sustainable Engineering Lab started an electrification plan for Ruhiira, Uganda, we knew we had our work cut out for us. The area, which is 40km from the nearest city, Mbarara, consists of 6 villages spread over several hundred kilometers and very poor roads.</p>
         <p>The underlying goal in Ruhiira, like any of our energy planning, was to determine energy demand&#8212;in other words&#8212;where energy needs to go and how much energy is needed. The first thing we did was geospatially examine residential population. Next, we mapped non-residential facilities such as markets, health and education facilities. Then we used this geospatial data to determine demand and identify the best energy technologies for different areas based on cost and technical information gathered from utilities, energy ministries, and private sector practitioners.</p>
+
+        <p><a href="index.html">&lt; Prev</a> | <a href="households.html">Next: Step 1 &gt;</a><br /><br /></p>
         </div>
         <div class="col-md-5" style="padding-top:20px;">
         <img src="images/ruhiira.jpg"/>
@@ -67,9 +69,8 @@
       <div class="row" style="padding-top:20px;">
       <img src="images/EnergyPlanning.jpg" />
       </div>
-      <p><a href="index.html">Prev</a> | <a href="households.html">Next: Step 1</a><br /><br /></p>
     </div>
-    <div class="row col-md-1"></div>
+    <div class="col-md-1"></div>
   </div><!-- Latest compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
