--- a/technology.html
+++ b/technology.html
@@ -52,8 +52,8 @@
   </div>
   <div class="bigspacer"></div>
   <div class="container">
-    <div class="row col-md-1"></div>
-    <div class="row col-md-10">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
 
       <h3>Step 4: Identify Energy Technologies</h3>
       <div class="row">
@@ -74,14 +74,15 @@
         </ol>
 
         <p style="color:#589917">TIP: Work with local stakeholders to determine the costs of different energy options. It is important to work with local stakeholders because the costs of each energy type varies greatly from area to area. The key is including all costs of transporting infrastructure to where it is needed and of local installation. Each country and even sub-regions experience nuances that affect distribution, procurement and construction costs. For example, in Liberia, we see practitioners face an installed wire cost of $45/m while nearby Ghana enjoys a cost of $25/m, like Ruhiira.</p>
+
+        <p><a href="demand.html">&lt; Prev</a> | <a href="plan.html">Next: Step 5 &gt;</a></p>
       </div>
       <div class="col-md-5" style="padding-top:20px;">
       <img src="images/solarPanelsRuhiira.jpg"/>
       </div>
       </div>
-      <p><a href="demand.html">Prev</a> | <a href="plan.html">Next: Step 5</a></p>
     </div>
-    <div class="row col-md-1"></div>
+    <div class="col-md-1"></div>
   </div><!-- Latest compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
